[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = "1.0"  # Allows to serialise and deserialise data
serde_derive = "1.0"
serde_json = "1.0" # This allows to display the blockchain in json format
sha2 = "0.10.1" # Creates hashes 

